# ArucoUnity

./: .gitignore  README.md
Client/Assets/: Client.cs  Listener.cs  Target.cs
Client/ProjectSettings/: AudioManager.asset  ClusterInputManager.asset  DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  NavMeshAreas.asset  NetworkManager.asset  Physics2DSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset  TimeManager.asset  UnityConnectSettings.asset
Tutorial/: Tutorial.sln  opencv_debug_x64.props  opencv_release_x64.props
Tutorial/Calibration/: Calibration.vcxproj  configuration.xml  main.cpp  out_camera_data.xml  out_camera_data_1080p.xml  out_camera_data_158.xml
Tutorial/Executables/: command_example.txt  out_camera_data_122_fisheye.xml  out_camera_data_122_nofisheye.xml
Tutorial/TrackingNoise/: TrackingNoise.vcxproj  TrackingNoise.vcxproj.filters  main.cpp  (+3 more)
Tutorial/Tutorial/: CMakeLists.txt  TargetGroup.cpp  TargetGroup.h  Tutorial.vcxproj  Tutorial.vcxproj.filters  main.cpp  opencv_helper.cpp  opencv_helper.h  out_camera_data.xml  run.sh  sender.cc  sender.h  stubs.h  target.cpp  target.h  test.cc
Tutorial/Tutorial/Debug/: vc140.idb
Tutorial/Tutorial/Debug/Tutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tutorial.lastbuildstate
Tutorial/Tutorial/x64/Debug/: vc140.idb
Tutorial/Tutorial/x64/Debug/Tutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tutorial.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+54 files in other folders)
